[Chromium] Sub-pixel text rendering is incorrectly used for WebView with transparent background. https://bugs.webkit.org/show_bug.cgi?id=89033

Patch by David Reveman <reveman@chromium.org> on 2012-06-14
Reviewed by James Robinson.

Add canvas background argument to PageWidgetDelegate::paint and call
PlatformCanvasSkia::setDrawingToImageBuffer to ensure that sub-pixel
rendering is only used when WebView has opaque background.

* src/PageWidgetDelegate.cpp:
(WebKit::PageWidgetDelegate::paint):
* src/PageWidgetDelegate.h:
* src/WebPagePopupImpl.cpp:
(WebKit::WebPagePopupImpl::paint):
* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::paint):

Canonical link: https://commits.webkit.org/106995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120381 268f45cc-cd09-0410-ab3c-d52691b4dbfc