Source/WebKit/chromium/src/PageWidgetDelegate.h
@@ -73,9 +73,13 @@ public:
 // Common implementation of WebViewImpl and WebPagePopupImpl.
 class PageWidgetDelegate {
 public:
+    enum CanvasBackground {
+        Opaque,
+        Translucent,
+    };
     static void animate(WebCore::Page*, double monotonicFrameBeginTime);
     static void layout(WebCore::Page*);
-    static void paint(WebCore::Page*, PageOverlayList*, WebCanvas*, const WebRect&);
+    static void paint(WebCore::Page*, PageOverlayList*, WebCanvas*, const WebRect&, CanvasBackground);
     static bool handleInputEvent(WebCore::Page*, PageWidgetEventHandler&, const WebInputEvent&);
 
 private:
